--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.1
+  geolocator: ^13.0.2
+  geocoding: ^4.0.0
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
@@ -18,9 +23,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - imagens/logo.png
+  
   # fonts:
   #   - family: Schyler
   #     fonts:
